Fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,6 @@ h5 {
 
 p {
   color: #727878;
-  min-width: 450px;
 }
 
 li.top {
